[gd_scene load_steps=42 format=3 uid="uid://clmy56e64g4dm"]

[ext_resource type="Texture2D" uid="uid://dipnobt3v1qmc" path="res://Assets/character/Skeleton/Take Hit.png" id="1_8n372"]
[ext_resource type="Script" path="res://Enemy/skeleton.gd" id="1_ln7qe"]
[ext_resource type="Texture2D" uid="uid://bgkcqw606s2m8" path="res://Assets/character/Skeleton/Attack.png" id="2_mt2rs"]
[ext_resource type="Texture2D" uid="uid://cqaaal6fsskhd" path="res://Assets/character/Skeleton/Death.png" id="2_yrurk"]
[ext_resource type="Texture2D" uid="uid://c1fpvp2gte2dj" path="res://Assets/character/Skeleton/Idle.png" id="3_118tj"]
[ext_resource type="Texture2D" uid="uid://jjhrqrlsdqyj" path="res://Assets/character/Skeleton/Walk.png" id="4_3520k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rgo25"]
size = Vector2(20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8onkq"]
atlas = ExtResource("2_mt2rs")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjfq0"]
atlas = ExtResource("2_mt2rs")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2hyj"]
atlas = ExtResource("2_mt2rs")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojwmt"]
atlas = ExtResource("2_mt2rs")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jfna"]
atlas = ExtResource("2_mt2rs")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtbuo"]
atlas = ExtResource("2_mt2rs")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3jhu"]
atlas = ExtResource("2_mt2rs")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_feese"]
atlas = ExtResource("2_mt2rs")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhpvn"]
atlas = ExtResource("1_8n372")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyd4i"]
atlas = ExtResource("1_8n372")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_s62m8"]
atlas = ExtResource("1_8n372")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6d7u"]
atlas = ExtResource("1_8n372")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cln5m"]
atlas = ExtResource("1_8n372")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi62n"]
atlas = ExtResource("1_8n372")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nci6u"]
atlas = ExtResource("1_8n372")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxvs0"]
atlas = ExtResource("1_8n372")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjah1"]
atlas = ExtResource("2_yrurk")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssn47"]
atlas = ExtResource("2_yrurk")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_du5no"]
atlas = ExtResource("2_yrurk")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pve44"]
atlas = ExtResource("2_yrurk")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qokf"]
atlas = ExtResource("3_118tj")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vb12"]
atlas = ExtResource("3_118tj")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cjhg"]
atlas = ExtResource("3_118tj")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_10d3i"]
atlas = ExtResource("3_118tj")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcjsb"]
atlas = ExtResource("3_118tj")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbq3y"]
atlas = ExtResource("3_118tj")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl0e8"]
atlas = ExtResource("3_118tj")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww1jk"]
atlas = ExtResource("3_118tj")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwhy1"]
atlas = ExtResource("4_3520k")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d5da"]
atlas = ExtResource("4_3520k")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m81o"]
atlas = ExtResource("4_3520k")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tla74"]
atlas = ExtResource("4_3520k")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_gw5ia"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8onkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjfq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2hyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojwmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jfna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtbuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3jhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feese")
}],
"loop": false,
"name": &"Attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhpvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyd4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s62m8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6d7u")
}],
"loop": false,
"name": &"Damage",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cln5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi62n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nci6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxvs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjah1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssn47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_du5no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pve44")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qokf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vb12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cjhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10d3i")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcjsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbq3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl0e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww1jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcjsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl0e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcjsb")
}],
"loop": false,
"name": &"Recover",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwhy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d5da")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m81o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tla74")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_eyxjy"]
radius = 142.0

[node name="Skeleton" type="CharacterBody2D"]
script = ExtResource("1_ln7qe")

[node name="Skeleton_Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_rgo25")

[node name="Skeleton_Anim" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(0.628333, 0.628333)
sprite_frames = SubResource("SpriteFrames_gw5ia")
animation = &"Idle"
autoplay = "Idle"

[node name="Skeleton_Agro_Area" type="Area2D" parent="."]

[node name="Skeleton_Agro_Collision" type="CollisionShape2D" parent="Skeleton_Agro_Area"]
shape = SubResource("CircleShape2D_eyxjy")

[connection signal="body_entered" from="Skeleton_Agro_Area" to="." method="_on_skeleton_agro_area_body_entered"]
[connection signal="body_exited" from="Skeleton_Agro_Area" to="." method="_on_skeleton_agro_area_body_exited"]
